[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "laion_clap"
version = "1.1.4"
authors = [
  { name="Ke Chen", email="knutchen@ucsd.edu" },
  { name="Yusong Wu" },
  { name="Tianyu Zhang" },
  { name="Yuchen Hui" }
]
maintainers = [
  { name="Ke Chen", email="knutchen@ucsd.edu" },
  { name="Yusong Wu" },
  { name="Tianyu Zhang" },
  { name="Yuchen Hui" }
]
description = "Contrastive Language-Audio Pretraining Model from LAION"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "torchlibrosa==0.1.0",
  "ftfy==6.1.3",
  "braceexpand==0.1.7",
  "webdataset==0.2.86",
  "wget==3.2",
  "wandb==0.16.2",
  "llvmlite==0.41.1",
  "h5py==3.10.0",
  "tqdm==4.66.1",
  "transformers==4.31.0",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]


[project.urls]
"Homepage" = "https://github.com/LAION-AI/CLAP"
"Bug Tracker" = "https://github.com/LAION-AI/CLAP/issues"